snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/maven-metadata.xml.sha1
813d298128fd602d9d4e41bc388f7724ca669d19